--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.1",
     "@uniswap/v3-sdk": "^3.13.1",
-    "ethers": "^6.13.2"
+    "dotenv": "^16.4.5",
+    "esrun": "^3.2.26",
+    "ethers": "^6.13.2",
+    "typescript": "^5.5.4"
   }
 }
-// anvil --fork-url https://mainnet.chainnodes.org/cb57fe1a-74ff-4adc-ab46-b3cbb96ce0ce --fork-block-number 17480237 --fork-chain-id 1 --chain-id 1   => run the loacl node with mainnet setup
-
-// https://docs.uniswap.org/sdk/v3/guides/web3-development-basics => for local development(client side)
